# rust_bavy_avian3d_basic_example_with_physics_and-proc_terrain_generation

./: .prettierrc.json  Cargo.toml  README.md  TODO.md  rustfmt.toml  x-run-dev.sh  x-run-prod-dynamic-linkig.sh  x-run-prod-static-linkig.sh
assets/characters/erica/: convert.py
assets/config/: debug.json  window.json
assets/shaders/cam-pos/: main.wgsl
assets/shaders/post-processing/: custom-water-example.wgsl  example.wgsl  example.wgsl.bak  test.wgsl  water.wgsl
assets/shaders/water/: below-material.wgsl  material.wgsl
assets/textures/: info.md
src/: debug_utils.rs  info.md  main.rs  main.rs.bak  main.rs.bak-2  main.rs.bak.audio_and_uvs  main.rs.physics-bak  main.rs.testing-bak
src/ambient_audio/: mod.rs
src/app_config/: mod.rs
src/app_config/debug/: mod.rs
src/app_config/window/: mod.rs
src/asset_loader/: mod.rs
src/asset_loader/audio_cache/: mod.rs
src/asset_loader/font_cache/: mod.rs
src/asset_loader/image_cache/: mod.rs
src/asset_loader/texture_cache/: mod.rs
src/camera/: bak  cam-and-view-port.rs  mod.rs  mod.rs.bak  mod.rs.bak-controll
src/constants/: mod.rs
src/constants/physics_world/: mod.rs
src/constants/viewport_settings/: mod.rs
src/cubes/: mod.rs
src/debug/: mod.rs
src/entities/: mod.rs
src/lights/: mod.rs
src/m_lib/: mod.rs
src/markers/: mod.rs
src/materials/: mod.rs
src/player/: animation_ids.rs  cam-and-view-port.rs  mod.rs
src/sky/: mod.rs
src/state/: mod.rs
src/sys_paths/: mod.rs
src/terrain/: mod.rs  mod.rs.bak-before-dynamic-terrain  terrain_constants.rs  tools.rs
(+67 files in other folders)
