[package]
name = "demo-01"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = { version = "0.15.0" }
bevy_dev_tools = "0.15.0"
bevy_window = "0.15.0"
bevy_diagnostic = "0.15.0"
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }

# bevy = { version = "0.14.2" }
# bevy_dev_tools = "0.14.2"
# bevy_window = "0.14.2"
# bevy_diagnostic = "0.14.2"
# avian3d = "0.1"

noise = "0.9.0"
wgpu = "23.0.1"
tracing = "0.1.41"
rand = "0.8.5"
chrono = "0.4.39"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = false
opt-level = 3

# [profile.release]
# lto = true
# opt-level = 3
# codegen-units = 1
# incremental = false

# [workspace]
# resolver = "2"
